unpackaged/main/default/objects/Contact/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <description>Surface text value of Account Name on Contact record</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Name - read only.</inlineHelpText>
    <label>Account Name - Text</label>
    <type>Text</type>
</CustomField>