unpackaged/main/default/objects/Contact/fields/Acct_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Acct_CaseSafeID__c</fullName>
    <description>MLF Customization July 2021. DO NOT DELETE this field. Doing so will impact Acknowledgment Letters. Not surfaced on a page layout</description>
    <formula>Account.AcctID_CaseSafeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct CaseSafeID</label>
    <type>Text</type>
</CustomField>