unpackaged/main/default/objects/Contact/fields/Acct_Formal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Acct_Formal_Greeting__c</fullName>
    <formula>Account.npo02__Formal_Greeting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct Formal Greeting</label>
    <type>Text</type>
</CustomField>