unpackaged/main/default/objects/Contact/fields/Acct_Informal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Acct_Informal_Greeting__c</fullName>
    <formula>Account.npo02__Informal_Greeting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct Informal Greeting</label>
    <type>Text</type>
</CustomField>