unpackaged/main/default/objects/Contact/fields/Acct_Postal_Mail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Acct_Postal_Mail_Opt_Out__c</fullName>
    <description>MLF Customization July 2021. DO NOT DELETE this field. Doing so will impact Acknowledgment Letters. Not surfaced on a page layout</description>
    <formula>Account.Postal_Mail_Opt_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct Postal Mail Opt Out</label>
    <type>Checkbox</type>
</CustomField>