unpackaged/main/default/objects/Contact/fields/Acct_TY_Once_A_Year__c.field-meta.xml
<CustomField>
    <fullName>Acct_TY_Once_A_Year__c</fullName>
    <description>MLF Customization July 2021. DO NOT DELETE this field. Doing so will impact Acknowledgment Letters. Not surfaced on a page layout</description>
    <formula>Account.TY_Once_A_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct TY Once-A-Year</label>
    <type>Checkbox</type>
</CustomField>