unpackaged/main/default/objects/Contact/fields/Active_Sustainer__c.field-meta.xml
<CustomField>
    <fullName>Active_Sustainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this contact associated with an active recurring donation?</description>
    <inlineHelpText>Is this contact associated with an active recurring donation?</inlineHelpText>
    <label>Active Sustainer</label>
    <type>Checkbox</type>
</CustomField>