unpackaged/main/default/objects/Contact/fields/Background_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Completed__c</fullName>
    <description>Date background check was run</description>
    <label>Background Check Completed</label>
    <type>Date</type>
</CustomField>