unpackaged/main/default/objects/Contact/fields/Background_Check_Notes__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Notes__c</fullName>
    <label>Background Check Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>