unpackaged/main/default/objects/Contact/fields/Background_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status__c</fullName>
    <description>Background check for volunteer who signs up for jobs that handle money or interaction with residents</description>
    <label>Background Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Needed</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Partial-Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>