unpackaged/main/default/objects/Contact/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legacy BDE uses the BATCH Object to store batch names but the new Gift Entry uses the NPSP DATA IMPORT BATCH Object to store batch names. Because of this difference we are unable to use the legacy BDE Batch field to store Gift Entry batch names.</description>
    <inlineHelpText>The Gift Entry Batch Name. Reflects batch name when Contact was created by GE, last modified by GE, or batch name of most recent GE created Opportunity.</inlineHelpText>
    <label>Batch Name</label>
    <referenceTo>npsp__DataImportBatch__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>