unpackaged/main/default/objects/Contact/fields/Certificate_License__c.field-meta.xml
<CustomField>
    <fullName>Certificate_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate/License</label>
    <type>Checkbox</type>
</CustomField>