unpackaged/main/default/objects/Contact/fields/Certificate_License_Notes__c.field-meta.xml
<CustomField>
    <fullName>Certificate_License_Notes__c</fullName>
    <label>Certificate/License Notes</label>
    <type>TextArea</type>
</CustomField>