unpackaged/main/default/objects/Contact/fields/CF_TCC_Letter__c.field-meta.xml
<CustomField>
    <fullName>CF_TCC_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This contact has signed a petition to TCC for CF Village in Aug/Sept 2013</description>
    <inlineHelpText>This contact has signed a petition to TCC for CF Village in Aug/Sept 2013</inlineHelpText>
    <label>DEPRECATED: CF TCC Letter</label>
    <type>Checkbox</type>
</CustomField>