unpackaged/main/default/objects/Contact/fields/CF_Village_Classification__c.field-meta.xml
<CustomField>
    <fullName>CF_Village_Classification__c</fullName>
    <label>DEPRECATED: CF Village Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>CAP Investors</fullName>
            </value>
            <value>
                <fullName>CAP Stakeholder</fullName>
            </value>
            <value>
                <fullName>CF Tours</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>