unpackaged/main/default/objects/Contact/fields/CF_Village_Petition__c.field-meta.xml
<CustomField>
    <fullName>CF_Village_Petition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This contact has signed a petition to Austin City Planning Comission for CF Village in Aug/Sept 2013</description>
    <inlineHelpText>This contact has signed a petition to Austin City Planning Comission for CF Village in Aug/Sept 2013</inlineHelpText>
    <label>CF Village Petition</label>
    <type>Checkbox</type>
</CustomField>