unpackaged/main/default/objects/Contact/fields/CF_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>CF_Volunteer__c</fullName>
    <formula>IF( CF_Volunteer_Hours__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Volunteer Hours (Lifetime) is greater than 0 then Volunteer equals TRUE.</inlineHelpText>
    <label>CF Volunteer</label>
    <type>Checkbox</type>
</CustomField>