unpackaged/main/default/objects/Contact/fields/CF_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>CF_Volunteer_Hours__c</fullName>
    <description>Total hours volunteering with CFV, based on status Confirmed, Checked-In or Completed</description>
    <label>CF Volunteer Hours</label>
    <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>contains</operation>
        <value>Confirmed, Completed, Checked-In</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>