unpackaged/main/default/objects/Contact/fields/CG_AccountID__c.field-meta.xml
<CustomField>
    <fullName>CG_AccountID__c</fullName>
    <description>Old CG account ID</description>
    <inlineHelpText>Old CG account ID</inlineHelpText>
    <label>DEPRECATED: CG Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>