unpackaged/main/default/objects/Contact/fields/CG_ContactID__c.field-meta.xml
<CustomField>
    <fullName>CG_ContactID__c</fullName>
    <description>Old Common Ground ID</description>
    <label>DEPRECATED: CG Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>