unpackaged/main/default/objects/Contact/fields/CG_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>CG_Create_Date__c</fullName>
    <label>DEPRECATED: CG Create Date</label>
    <type>Date</type>
</CustomField>