unpackaged/main/default/objects/Contact/fields/Combined_Hard_Soft_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Combined_Hard_Soft_Last_Year__c</fullName>
    <formula>npo02__Soft_Credit_Last_Year__c  +  npo02__OppAmountLastYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Hard+Soft Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>