unpackaged/main/default/objects/Contact/fields/Combined_Hard_Soft_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Combined_Hard_Soft_This_Year__c</fullName>
    <description>Total hard and soft credit donations for this year for this contact</description>
    <formula>npo02__Soft_Credit_This_Year__c  +  npo02__OppAmountThisYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total hard and soft credit donations for this year for this contact</inlineHelpText>
    <label>Combined Hard+Soft This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>