unpackaged/main/default/objects/Contact/fields/Combined_Hard_soft_Total__c.field-meta.xml
<CustomField>
    <fullName>Combined_Hard_soft_Total__c</fullName>
    <description>Total hard and soft credit for this contact</description>
    <formula>npo02__Soft_Credit_Total__c  +  npo02__TotalOppAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total hard and soft credit for this contact</inlineHelpText>
    <label>Combined Hard+Soft Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>