unpackaged/main/default/objects/Contact/fields/Combined_Hard_Soft_Two_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Combined_Hard_Soft_Two_Years_Ago__c</fullName>
    <formula>npo02__Soft_Credit_Two_Years_Ago__c +  npo02__OppAmount2YearsAgo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Hard+Soft Two Years Ago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>