unpackaged/main/default/objects/Contact/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Type of the Contact&#39;s Primary Affiliation</description>
    <inlineHelpText>If Contact has a Primary Affiliation, this field contains the Account Type of the Affiliated Account.</inlineHelpText>
    <label>Community</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The Account Type for the Primary Affiliation is not listed as an allowable Type. Have the Admin refer to the list of Types on the Lookup Filter on the Community field on the Contact Object.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Community, Foundation, Group, Church, Nonprofit Partner, Faith Partner, School,Business,Citizens and Business Groups,Tracker Use</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>