unpackaged/main/default/objects/Contact/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <description>MLF created 31Jan23. Used for exporting reports to Excel to give a direct link to record detail page within the Excel.</description>
    <formula>HYPERLINK(&quot;https://goodness.my.salesforce.com/&quot;&amp; Id, &quot;Contact Lookup&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Lookup</label>
    <type>Text</type>
</CustomField>