unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>This field is used to indicate if a Contact is a MLF Staff member, Missional or Board Member.</description>
    <inlineHelpText>Used to indicate if the Contact is a MLF Staff member, Missional or Board Member. For non-MLF Contacts the field is blank. For MLF Contacts, select the option that best describes their MLF role.</inlineHelpText>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLF Staff</fullName>
            </value>
            <value>
                <fullName>MLF Missional</fullName>
            </value>
            <value>
                <fullName>MLF Staff and Missional</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>MLF Support Corp Board Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>