unpackaged/main/default/objects/Contact/fields/ContactID_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContactID_CaseSafeID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID-CaseSafeID</label>
    <type>Text</type>
</CustomField>