unpackaged/main/default/objects/Contact/fields/Convio_ID__c.field-meta.xml
<CustomField>
    <fullName>Convio_ID__c</fullName>
    <description>Legacy ConvioID</description>
    <inlineHelpText>Legacy ConvioID</inlineHelpText>
    <label>DEPRECATED: Convio ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>