unpackaged/main/default/objects/Contact/fields/Count_of_Active_Team_Participation__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_Team_Participation__c</fullName>
    <description>Deprecated custom field &#39;Count of Active Team Participation&#39;</description>
    <label>DEPRECATED: Count of Active Team Part</label>
    <summaryFilterItems>
        <field>Team_Assignment__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Team_Assignment__c.Volunteer_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>