unpackaged/main/default/objects/Contact/fields/Current_Education_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Education_Status__c</fullName>
    <inlineHelpText>Select the status that best represents the Contact&#39;s replication capability at this time.</inlineHelpText>
    <label>Education Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Aspiring Replicator</fullName>
                <label>Aspiring Replicator (Individual)</label>
            </value>
            <value>
                <fullName>Replicator</fullName>
                <label>Replicator (Individual)</label>
            </value>
            <value>
                <fullName>Market Player</fullName>
            </value>
            <value>
                <fullName>Academic / Researcher</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>