unpackaged/main/default/objects/Contact/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <inlineHelpText>For the Certificate or License</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>