unpackaged/main/default/objects/Contact/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED: Deceased</label>
    <type>Checkbox</type>
</CustomField>