unpackaged/main/default/objects/Contact/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this contact donated to MLF?</description>
    <inlineHelpText>Has this contact donated to MLF?</inlineHelpText>
    <label>Donor</label>
    <type>Checkbox</type>
</CustomField>