unpackaged/main/default/objects/Contact/fields/Donor_Classification__c.field-meta.xml
<CustomField>
    <fullName>Donor_Classification__c</fullName>
    <label>Donor Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pave the Way Home - Committed</fullName>
            </value>
            <value>
                <fullName>Pave the Way Home - Crowdfunding</fullName>
            </value>
            <value>
                <fullName>Steward</fullName>
            </value>
            <value>
                <fullName>CAP - Committed</fullName>
            </value>
            <value>
                <fullName>CAP - Considering</fullName>
            </value>
            <value>
                <fullName>CAP - Cultivating</fullName>
            </value>
            <value>
                <fullName>CAP - Prospect</fullName>
            </value>
            <value>
                <fullName>CAP - Small Donors</fullName>
            </value>
            <value>
                <fullName>Phase 2 Prospect</fullName>
            </value>
            <value>
                <fullName>Stakeholders</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>BYNAH</fullName>
            </value>
            <value>
                <fullName>CF Construction Partner</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Christmas in August 2017</fullName>
            </value>
            <value>
                <fullName>TYP - Committed</fullName>
            </value>
            <value>
                <fullName>TYP - Considering</fullName>
            </value>
            <value>
                <fullName>TYP - Cultivating</fullName>
            </value>
            <value>
                <fullName>TYP - Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>