unpackaged/main/default/objects/Contact/fields/Donor_Primary_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Donor_Primary_Relationship__c</fullName>
    <label>DEPRECATED: Donor Primary Relationship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan</fullName>
            </value>
            <value>
                <fullName>Donna</fullName>
            </value>
            <value>
                <fullName>Tricia</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Elizabeth</fullName>
            </value>
            <value>
                <fullName>Sarah</fullName>
            </value>
            <value>
                <fullName>Teresa</fullName>
            </value>
            <value>
                <fullName>Tracee</fullName>
            </value>
            <value>
                <fullName>Heidi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>