unpackaged/main/default/objects/Contact/fields/Donor_Segment__c.field-meta.xml
<CustomField>
    <fullName>Donor_Segment__c</fullName>
    <label>Donor Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Sustainer</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Non-donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>