unpackaged/main/default/objects/Contact/fields/Education_Communications_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Education_Communications_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Education Team Use Only. Select this box if the Contact wants to opt out (unsubscribe) from communications sent by the Edu Team. Does not unsubscribe the Contact from other communications sent by MLF.</inlineHelpText>
    <label>Education Communications Opt Out</label>
    <type>Checkbox</type>
</CustomField>