unpackaged/main/default/objects/Contact/fields/Education_Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Education_Confidentiality_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this box if the Contact has completed and returned the Education Confidentiality Agreement. A copy of the agreement should be attached to the Contact record.</inlineHelpText>
    <label>Education Confidentiality Agreement</label>
    <type>Checkbox</type>
</CustomField>