unpackaged/main/default/objects/Contact/fields/Education_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Education_Help_Text__c</fullName>
    <defaultValue>&quot;The Email Opt Out selection box listed next should be selected if the contact does not want to receive email communications from MLF.&quot;</defaultValue>
    <description>Created to provide the Edu Team a Help Text for the standard Contact Email Opt Out field. Standard fields do not support the use of Help Text.</description>
    <label>Education Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>