unpackaged/main/default/objects/Contact/fields/Education_Symposium_Alumn__c.field-meta.xml
<CustomField>
    <fullName>Education_Symposium_Alumn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this box if the Contact has previously attended a Symposium</inlineHelpText>
    <label>Education Symposium Alumn</label>
    <type>Checkbox</type>
</CustomField>