unpackaged/main/default/objects/Contact/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>RIGHT(Email, LEN(Email)- FIND(&#39;@&#39;,Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>