unpackaged/main/default/objects/Contact/fields/Email_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Email_Subscriptions__c</fullName>
    <description>Which email list this contact subscribes to</description>
    <inlineHelpText>Which email list this contact subscribes to</inlineHelpText>
    <label>Email Subscriptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CommunityFirst</fullName>
            </value>
            <value>
                <fullName>GenesisGardens</fullName>
            </value>
            <value>
                <fullName>ROADS</fullName>
            </value>
            <value>
                <fullName>SJNCommissary</fullName>
            </value>
            <value>
                <fullName>General MLF Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>