unpackaged/main/default/objects/Contact/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Employer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>