unpackaged/main/default/objects/Contact/fields/Employer_Website__c.field-meta.xml
<CustomField>
    <fullName>Employer_Website__c</fullName>
    <label>DEPRECATED: Employer Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>