unpackaged/main/default/objects/Contact/fields/First_Education_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Education_Contact_Date__c</fullName>
    <description>For Edu App. Field is populated by a Flow that sets the field to the Date when the Current-Education-Status field transitions from None to one of the established Picklist Value fields</description>
    <inlineHelpText>Date the Education Team made first contact with the individual.</inlineHelpText>
    <label>Education First Contact Date</label>
    <type>Date</type>
</CustomField>