unpackaged/main/default/objects/Contact/fields/fortafy_wordpressuserid__c.field-meta.xml
<CustomField>
    <fullName>fortafy_wordpressuserid__c</fullName>
    <externalId>true</externalId>
    <label>Wordpress User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>