unpackaged/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
    <label>Volunteer Auto-Reminder Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>